--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div class="alert alert-primary" role="alert">
         This is a primary alert—check it out with bootstrap!
     </div>
+    
+    <img src="images/aa.png" width="50%" height="100px"> </img>
 
 </div>
 
